# fairness-drift

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
api/: __init__.py  middleware.py  routes.py  schemas.py
benchmarks/: compas_simulation.py  synthetic_drift.py
drift/: __init__.py  baseline.py  f_adwin.py  f_ewma.py  f_page_hinkley.py  metrics.py  monitor.py  viz.py
tests/: test_adversarial_poisoning.py  test_adwin.py  test_api.py  test_evasion.py  test_ewma.py  test_monitor.py  test_page_hinkley.py
